fix(roadmap): handle doesn't align to the character in various browser layout

--- a/assets/css/roadmap.css
+++ b/assets/css/roadmap.css
@@ -36,7 +36,6 @@ img.tile {
 
 div.character {
   position: absolute;
-  width: 4dvw;
   background-size: 100% 100%; /* this ignores ratio of original image */
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -65,8 +64,7 @@ div#main-bg {
 div#description-window {
   position: absolute;
   width: 40dvw;
-  height: 40dvh;
-  margin-top: 50px;
+  height: 40dvw;
   border-radius: 30px;
   background-color: red;
   z-index: 99;
@@ -78,7 +76,6 @@ div#description-window-handle {
   position: absolute;
   width: 0;
   height: 0;
-  margin-top: 50px;
   z-index: 99;
   opacity: 0.9;
   visibility: hidden;
